--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,12 +1,20 @@
+.head_left{
+    display: flex;
+    flex-direction: column;
+}
+
 .head_left .h_subTitle{
     background: #FFEEDE;
     color: #FB9431;
     font-weight: bold;
     padding: 7px 20px;
     border-radius: 20px;
+    margin-top: 100px;
+    width: 53%;
 }
+
 .h_title h1{
-    font-size: 50px;
+    font-size: 45px;
 }
 .contact_btn{
     border:1px solid #fb1c15 !important;
@@ -23,12 +31,4 @@
     width: 90%;
     height: 90%;
     object-fit: cover;
-}
-.curve{
-    width: 8rem;
-    height: 100%;
-    object-fit: cover;
-}
-.starr{
-    color: #FB9431;
 }
